--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -32,4 +32,28 @@
     <servlet-name>UserServlet</servlet-name>
     <url-pattern>/UserServlet</url-pattern>
   </servlet-mapping>
+  <servlet>
+	<servlet-name>ClientServlet</servlet-name>
+	<servlet-class>it.contrader.servlets.ClientServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+	<servlet-name>ClientServlet</servlet-name>
+	<url-pattern>/ClientServlet</url-pattern>
+  </servlet-mapping>
+    <servlet>
+	<servlet-name>OrderServlet</servlet-name>
+	<servlet-class>it.contrader.servlets.OrderServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+	<servlet-name>OrderServlet</servlet-name>
+	<url-pattern>/OrderServlet</url-pattern>
+  </servlet-mapping>
+    <servlet>
+	<servlet-name>ItemServlet</servlet-name>
+	<servlet-class>it.contrader.servlets.ItemServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+	<servlet-name>ItemServlet</servlet-name>
+	<url-pattern>/ItemServlet</url-pattern>
+  </servlet-mapping>
 </web-app>
